--- a/client/back-office/views/forum.html
+++ b/client/back-office/views/forum.html
@@ -17,7 +17,7 @@
       $(document).ready(async () => {
         var user = await isUserLogged();
         if (!user.admin)
-          window.location.href = "http://localhost:5000/b/views/home.html";
+          window.location.href = "http://site212247.tw.cs.unibo.it/b/views/home.html";
         $("#sidebar").load("../tabs/sidebar.html");
       });
 
@@ -25,7 +25,7 @@
       let totPosts = 0;
 
       const getPosts = async () => {
-        var ret = await fetch("http://localhost:5000/api/post", {
+        var ret = await fetch("http://site212247.tw.cs.unibo.it/api/post", {
           method: "GET",
           credentials: "include",
         });
@@ -34,7 +34,7 @@
       };
 
       const deletePost = async (id) => {
-        var ret = await fetch("http://localhost:5000/api/post/" + id, {
+        var ret = await fetch("http://site212247.tw.cs.unibo.it/api/post/" + id, {
           method: "DELETE",
           credentials: "include",
         });
