--- a/client/back-office/views/companies.html
+++ b/client/back-office/views/companies.html
@@ -28,7 +28,7 @@
       const setUser = async () => {
         user = await isUserLogged();
         if (user === undefined)
-          window.location.href = "http://localhost:5000/b/views/login.html";
+          window.location.href = "http://site212247.tw.cs.unibo.it/b/views/login.html";
 
         if (user.admin) getCompanies("");
         else getCompanies(user.id);
@@ -37,11 +37,11 @@
       const getCompanies = async (id) => {
         var ret;
         id === ""
-          ? (ret = await fetch("http://localhost:5000/api/company", {
+          ? (ret = await fetch("http://site212247.tw.cs.unibo.it/api/company", {
               method: "GET",
               credentials: "include",
             }))
-          : (ret = await fetch("http://localhost:5000/api/company?_id=" + id, {
+          : (ret = await fetch("http://site212247.tw.cs.unibo.it/api/company?_id=" + id, {
               method: "GET",
               credentials: "include",
             }));
@@ -52,7 +52,7 @@
 
       const sendData = async (index) => {
         var ret = await fetch(
-          "http://localhost:5000/api/company/update/" + toEditData[index]._id,
+          "http://site212247.tw.cs.unibo.it/api/company/update/" + toEditData[index]._id,
           {
             method: "POST",
             headers: { "Content-Type": "application/json" },
@@ -66,7 +66,7 @@
       };
 
       const deleteCp = async (id) => {
-        var ret = await fetch("http://localhost:5000/api/company/" + id, {
+        var ret = await fetch("http://site212247.tw.cs.unibo.it/api/company/" + id, {
           method: "DELETE",
           credentials: "include",
         });
