--- a/client/back-office/views/login.html
+++ b/client/back-office/views/login.html
@@ -17,7 +17,7 @@
         const tokenback = authHeader && authHeader.split("=");
         if (tokenback[0] === "token") {
           alert("Log out from frotoffice first");
-          window.location.href = "http://localhost:3000/f";
+          window.location.href = "http://site212247.tw.cs.unibo.it/f";
           return;
         }
         if (tokenback) {
@@ -25,7 +25,7 @@
             window.location.href = "home.html";
           else {
             document.cookie =
-              "tokenback=;path=/;domain=localhost;expires=Thu, 01 Jan 1970 00:00:01 GMT";
+              "tokenback=;path=/;domain=site212247.tw.cs.unibo.it;expires=Thu, 01 Jan 1970 00:00:01 GMT";
             window.location.reload();
           }
         }
@@ -34,7 +34,7 @@
       const login = async () => {
         const mail = $("#emailTab").val();
         const pass = $("#passwordTab").val();
-        var ret = await fetch("http://localhost:5000/api/admin/login", {
+        var ret = await fetch("http://site212247.tw.cs.unibo.it/api/admin/login", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ email: mail, password: pass }),
@@ -109,7 +109,7 @@
                         </button>
                         <a
                           class="text-gray-500"
-                          href="http://localhost:3000/f/restore"
+                          href="http://site212247.tw.cs.unibo.it/f/restore"
                           >Forgot password?</a
                         >
                       </div>
@@ -136,7 +136,7 @@
                       If you aren't a company or an admin, please go back to the
                       <a
                         class="underline text-cyan-300"
-                        href="http://localhost:3000/f"
+                        href="http://site212247.tw.cs.unibo.it/f"
                         >front office</a
                       >.
                     </p>
