--- a/client/back-office/views/profile.html
+++ b/client/back-office/views/profile.html
@@ -45,7 +45,7 @@
       };
 
       const getAccountInfo = async (id) => {
-        let ret = await fetch("http://localhost:5000/api/company?_id=" + id, {
+        let ret = await fetch("http://site212247.tw.cs.unibo.it/api/company?_id=" + id, {
           method: "GET",
           credentials: "include",
         });
@@ -54,7 +54,7 @@
       };
 
       const getAdminsList = async (id) => {
-        let ret = await fetch("http://localhost:5000/api/admin", {
+        let ret = await fetch("http://site212247.tw.cs.unibo.it/api/admin", {
           method: "GET",
           credentials: "include",
         });
@@ -63,7 +63,7 @@
       };
 
       const getAdminInfo = async (id) => {
-        let ret = await fetch("http://localhost:5000/api/admin?_id=" + id, {
+        let ret = await fetch("http://site212247.tw.cs.unibo.it/api/admin?_id=" + id, {
           method: "GET",
           credentials: "include",
         });
@@ -447,7 +447,7 @@
 
       const sendUpdateData = async () => {
         console.log(data[0]);
-        let url = user.admin ? "http://localhost:5000/api/admin/update/" : "http://localhost:5000/api/company/update/" + data[0]._id;
+        let url = user.admin ? "http://site212247.tw.cs.unibo.it/api/admin/update/" : "http://site212247.tw.cs.unibo.it/api/company/update/" + data[0]._id;
         var ret = await fetch(url, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
@@ -474,7 +474,7 @@
 
       const sendNewAdmin = async (newData) => {
         console.log(newData);
-        var ret = await fetch("http://localhost:5000/api/admin/new/", {
+        var ret = await fetch("http://site212247.tw.cs.unibo.it/api/admin/new/", {
           method: "PUT",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(newData),
