form to create new company

--- a/client/back-office/views/profile.html
+++ b/client/back-office/views/profile.html
@@ -473,7 +473,7 @@
       };
 
       const sendNewAdmin = async (newData) => {
-        console.log(newData);
+        //console.log(newData);
         var ret = await fetch("http://localhost:5000/api/admin/new/", {
           method: "PUT",
           headers: { "Content-Type": "application/json" },
