--- a/client/back-office/views/forum.html
+++ b/client/back-office/views/forum.html
@@ -422,7 +422,7 @@
   </head>
 
   <body>
-    <div class="flex flex-col md:flex-row flex-1 h-full">
+    <div class="flex flex-col md:flex-row flex-1 h-full text-xl">
       <div
         class="md:fixed flex justify-center py-5 md:py-0 md:pl-5 self-center"
         id="sidebar"
@@ -432,8 +432,7 @@
           POSTS
         </div>
         <div class="gray m-2 mb-1 self-center">
-          Click on
-          <i class="fa fa-copy"></i>
+          Click on something followed by <i class="fa fa-copy"></i>
           to copy the info!
         </div>
         <div class="flex flex-row mt-2 mb-1 mx-4">
