--- a/client/back-office/views/customers.html
+++ b/client/back-office/views/customers.html
@@ -370,15 +370,15 @@
 </head>
 
 <body>
-	<div class="flex flex-col md:flex-row flex-1 h-full">
+	<div class="flex flex-col md:flex-row flex-1 h-full text-xl">
 		<div class="md:fixed flex justify-center py-5 md:py-0 md:pl-5 self-center" id="sidebar"></div>
 		<div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
 			<div id="title" class="font-bold text-4xl sm:text-6xl m-4 self-center">
 				CUSTOMERS
 			</div>
 			<div class="gray m-2 mb-1 self-center">
-				Click on a customer id to copy it!
-				<i class="fa fa-copy"></i>
+				Click on something followed by
+				<i class="fa fa-copy"></i> to copy it!
 			</div>
 			<div class="flex flex-row mt-2 mx-4 mb-1">
 				<button id="showBtn" class="hidden flex btn bg-save p-1 hover:opacity-80 text-white font-bold rounded mr-2"
