--- a/client/back-office/views/ecommerce.html
+++ b/client/back-office/views/ecommerce.html
@@ -25,17 +25,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="flex flex-col md:flex-row flex-1 h-full">
+    <div class="flex flex-col md:flex-row flex-1 h-full text-xl">
       <div
         class="md:fixed flex justify-center py-5 md:py-0 md:pl-5 self-center"
         id="sidebar"
       ></div>
       <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
-        <div id="title" class="font-bold text-4xl sm:text-6xl m-4">
+        <div id="title" class="font-bold text-4xl sm:text-6xl m-4 mb-3 self-center">
           ECOMMERCE
         </div>
-        <div class="gray m-4 mb-1">
-          Click on an id to copy it! <i class="fa fa-copy"></i>
+        <div class="gray m-4 mb-1 self-center">
+          Click on something followed by <i class="fa fa-copy"></i> to copy it!
         </div>
         <div id="ecommerceInfo" class="flex m-4 mt-2"></div>
       </div>
