--- a/client/back-office/views/prenotations.html
+++ b/client/back-office/views/prenotations.html
@@ -351,7 +351,7 @@
     </script>
   </head>
   <body>
-    <div class="flex flex-col md:flex-row flex-1 h-full">
+    <div class="flex flex-col md:flex-row flex-1 h-full text-xl">
       <div
         class="md:fixed flex justify-center py-5 md:py-0 md:pl-5 self-center"
         id="sidebar"
@@ -488,7 +488,7 @@
                       id="filterCity"
                       name="filterCity"
                       type="text"
-                      placeholder="ex. Torino"
+                      placeholder="ex. Torino or online"
                       class="px-1 m-1 rounded w-[15rem]"
                       oninput="filterList()"
                     />
