--- a/client/back-office/views/profile.html
+++ b/client/back-office/views/profile.html
@@ -34,7 +34,7 @@
           $("#title").html("COMPANY PROFILE");
           getAccountInfo(user.id);
         }
-        $(".tab").addClass("ml-10");
+        $(".tab").addClass("items-center");
       });
 
       const showTab = (divId) => {
@@ -253,7 +253,7 @@
           data[0].cities.monday +
           `"
                 placeholder="Type new monday city"
-                class="change px-1 rounded shadow-sm border-primary my-2 ml-3 bg-transparent"
+                class="change px-1 rounded shadow-sm border-primary my-2 bg-transparent"
               />
             </div>
             <div class="my-4"><span class="primary font-semibold">Tuesday:</span>
@@ -265,7 +265,7 @@
           data[0].cities.tuesday +
           `"
                 placeholder="Type new tuesday city"
-                class="change px-1 rounded shadow-sm border-primary my-2 ml-3 bg-transparent"
+                class="change px-1 rounded shadow-sm border-primary my-2 bg-transparent"
               />
             </div>
             <div class="my-4"><span class="primary font-semibold">Wednesday:</span>
@@ -277,7 +277,7 @@
           data[0].cities.wednesday +
           `"
                 placeholder="Type new wednesday city"
-                class="change px-1 rounded shadow-sm border-primary my-2 ml-3 bg-transparent"
+                class="change px-1 rounded shadow-sm border-primary my-2 bg-transparent"
               />
             </div>
             <div class="my-4"><span class="primary font-semibold">Thursday:</span>
@@ -289,7 +289,7 @@
           data[0].cities.thursday +
           `"
                 placeholder="Type new thursday city"
-                class="change px-1 rounded shadow-sm border-primary my-2 ml-3 bg-transparent"
+                class="change px-1 rounded shadow-sm border-primary my-2 bg-transparent"
               />
             </div>
             <div class="my-4"><span class="primary font-semibold">Friday:</span>
@@ -301,7 +301,7 @@
           data[0].cities.friday +
           `"
                 placeholder="Type new friday city"
-                class="change px-1 rounded shadow-sm border-primary my-2 ml-3 bg-transparent"
+                class="change px-1 rounded shadow-sm border-primary my-2 bg-transparent"
               />
             </div> 
           </div>
@@ -649,11 +649,11 @@
                   </button>
                 </div>
                 <div
-                  class="flex flex-1 text-xl ml-4 border-t-solid border-t-[1px] border-t-[#59114d]"
+                  class="flex flex-1 text-xl border-t-solid border-t-[1px] border-t-[#59114d]"
                 >
                   <div id="publicInfo" class="tab flex flex-1 flex-col">
                     <div
-                      class="flex justify-center secondary text-3xl font-bold mt-4"
+                      class="flex justify-center secondary text-3xl font-bold mt-4 mb-10"
                     >
                       PUBLIC INFORMATION
                     </div>
@@ -668,7 +668,7 @@
                         id="newName"
                         name="newName"
                         placeholder="Type new name"
-                        class="change px-1 rounded shadow-sm border-primary ml-3 bg-transparent"
+                        class="change px-1 rounded shadow-sm border-primary bg-transparent"
                       />
                     </div>
                     <div class="adminOnly hidden my-8">
@@ -677,7 +677,7 @@
                         id="newSurname"
                         name="newSurname"
                         placeholder="Type new surname"
-                        class="change px-1 rounded shadow-sm border-primary ml-3 bg-transparent"
+                        class="change px-1 rounded shadow-sm border-primary bg-transparent"
                       />
                     </div>
                     <div class="companyOnly hidden my-8">
@@ -686,14 +686,14 @@
                         id="newOwner"
                         name="newOwner"
                         placeholder="Type new owner"
-                        class="change px-1 rounded shadow-sm border-primary ml-3 bg-transparent"
+                        class="change px-1 rounded shadow-sm border-primary bg-transparent"
                       />
                     </div>
                     <div class="companyOnly hidden mt-8">
                       <span class="primary font-semibold">Profession:</span>
                       <span
                         id="newProfession"
-                        class="change px-1 ml-3 bg-transparent"
+                        class="change px-1 bg-transparent"
                       ></span>
                     </div>
                     <button
@@ -715,7 +715,7 @@
                         id="newEmail"
                         name="newEmail"
                         placeholder="Type new email"
-                        class="change px-1 rounded shadow-sm border-primary ml-3 bg-transparent"
+                        class="change px-1 rounded shadow-sm border-primary  bg-transparent"
                       />
                     </div>
                     <div class="my-8">
@@ -724,12 +724,12 @@
                         id="newPassword"
                         name="newPassword"
                         placeholder="Type new password"
-                        class="change px-1 rounded shadow-sm border-primary ml-3 bg-transparent"
+                        class="change px-1 rounded shadow-sm border-primary  bg-transparent"
                       />
                     </div>
                     <div class="mt-8">
                       <span class="primary font-semibold">Id:</span>
-                      <span id="adminId" class="ml-3"></span>
+                      <span id="adminId"></span>
                     </div>
                     <button
                       class="flex bg-save px-2 py-2 my-10 rounded self-center font-bold thirdColor hover:opacity-75"
@@ -744,23 +744,23 @@
                     >
                       CREATE ADMIN ACCOUNT
                     </div>
-                    <div class="adminOnly hidden my-8">
-                      <div class="primary font-semibold">
+                    <div class="adminOnly hidden my-8 self-center">
+                      <div class="primary font-semibold text-center">
                         These credentials will create a new admin account.
                       </div>
-                      <div class="primary font-semibold mb-16">
+                      <div class="flex primary font-semibold mb-16 text-center" style="overflow-wrap: break-word; max-width: 40rem;">
                         They will be able to access back office and modify every
                         data and information about customers, companies and
                         prenotations.
                       </div>
-                      <div class="flex flex-col flex-1" id="createNewAdminTab">
+                      <div class="flex flex-col flex-1 self-center items-center" id="createNewAdminTab">
                         <div class="my-8">
                           <span class="primary font-semibold">New admin name:</span>
                           <input
                             id="createAdminName"
                             name="createAdminName"
                             placeholder="Type new admin name"
-                            class="change px-1 rounded shadow-sm border-primary ml-3 bg-transparent"
+                            class="change px-1 rounded shadow-sm border-primary bg-transparent"
                           />
                         </div>
                         <div class="my-8">
@@ -769,7 +769,7 @@
                             id="createAdminSurname"
                             name="createAdminSurname"
                             placeholder="Type new admin surname"
-                            class="change px-1 rounded shadow-sm border-primary ml-3 bg-transparent"
+                            class="change px-1 rounded shadow-sm border-primary bg-transparent"
                           />
                         </div>
                         <div class="my-8">
@@ -778,7 +778,7 @@
                             id="createAdminEmail"
                             name="createAdminEmail"
                             placeholder="Type new admin email"
-                            class="change px-1 rounded shadow-sm border-primary ml-3 bg-transparent"
+                            class="change px-1 rounded shadow-sm border-primary bg-transparent"
                           />
                         </div>
                         <div class="my-8">
@@ -787,7 +787,7 @@
                             id="createAdminPassword"
                             name="createAdminPassword"
                             placeholder="Type new admin password"
-                            class="change px-1 rounded shadow-sm border-primary ml-3 bg-transparent"
+                            class="change px-1 rounded shadow-sm border-primary bg-transparent"
                           />
                         </div>
                         <button
@@ -799,7 +799,7 @@
                       </button>
                       <span
                         id="newProfession"
-                        class="change px-1 ml-3 bg-transparent"
+                        class="change px-1 bg-transparent"
                       ></span>
                     </div>
                   </div>
